src/test/deca/syntax/invalid/created/noSCPrintln.deca
//

// De meme avec un println

{
    println("Ne me voyez pas svp")
}
